--- a/ICT/Functions.ipynb
+++ b/ICT/Functions.ipynb
@@ -146,7 +146,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The answer is correct, but we need to be careful here. Whenever making some arithmetic expression, we should use parentheses. So a better definition would be:",
+   "source": "The answer is correct, but we need to be careful here (a common mistake I observed in the lab). Whenever making some arithmetic expression, we should use parentheses. So a better definition would be:",
    "id": "7e40f0c22280a69b"
   },
   {
@@ -185,35 +185,13 @@
    "cell_type": "code",
    "source": [
     "def CalculateDistance(v, t):\n",
-    "    return v*t"
+    "    return v*t\n",
+    "\n",
+    "CalculateDistance(12,3)"
    ],
    "id": "8622412bbc54a15d",
    "outputs": [],
    "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-13T13:05:58.542470Z",
-     "start_time": "2025-11-13T13:05:58.538255Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "CalculateDistance(12,3)",
-   "id": "e3f7cd367f7f5e4e",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
   },
   {
    "metadata": {},
@@ -249,8 +227,182 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "__TBC___",
+   "source": [
+    "## Making your own modules\n",
+    "\n",
+    "As we continue coding, it keeps on growing and before we realize, it becomes too lengthy and messy. Inevitably, a better approach is to maintain it.\n",
+    "For maintaining the code, we should keep functions in a separate Python file. Once you define them, you can call them easily from another Python file or JuPyter notebook.\n",
+    "\n",
+    "### Example\n",
+    "Lets suppose, I make a Python file, `MyFunctions.py` (not a very good name, but oh well!) with a couple of functions. I can easily import it to call the respective functions."
+   ],
    "id": "4761fe2147581632"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T12:45:47.283620Z",
+     "start_time": "2025-11-16T12:45:47.280513Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import MyFunctions\n",
+    "\n",
+    "distance = MyFunctions.Haversine(31.5,74.4,49.0,2.55) #Coordinates of Lahore, followed by Paris\n",
+    "\n",
+    "#We can use round() here too\n",
+    "distance = round(distance, 2)\n",
+    "print(distance,\"km\")"
+   ],
+   "id": "866c6e036d372b7e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6154.46 km\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Now, we don't even need to know what's inside the Haversine formula. All we know is that:\n",
+    "- it calculates the distance between two points on earth\n",
+    "- it takes the coordinates of both points as 4 points (latitude and longitude of first city, followed by the same of second)\n",
+    "\n",
+    "We call it accordingly and that's it. Similarly, we can call other functions in the file."
+   ],
+   "id": "f58dafe2c3324dd0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T12:50:14.917258Z",
+     "start_time": "2025-11-16T12:50:14.914896Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "probability = MyFunctions.Sigmoid(3.78)\n",
+    "print(round(probability,5),\"%\")"
+   ],
+   "id": "3602a6194876ae9b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.97769 %\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Importing tricks\n",
+    "\n",
+    "Prepending every function with `MyFunctions` sounds too much, so we can reimport it in an efficient way as:"
+   ],
+   "id": "90efc3c86b286893"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T12:52:24.383086Z",
+     "start_time": "2025-11-16T12:52:24.377905Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from MyFunctions import Sigmoid\n",
+    "\n",
+    "Sigmoid(3.78)"
+   ],
+   "id": "5e6b0397b7be452c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9776865613009676"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "And in case we want to use multiple functions from the same file, we can update our import statement accordingly. Or can even generalize it to import all of those functions by *.",
+   "id": "1ef249bb9dd3cfdf"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T12:57:26.503554Z",
+     "start_time": "2025-11-16T12:57:26.498589Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from MyFunctions import *\n",
+    "distance = Haversine(31.5,74.4,49.0,2.55)"
+   ],
+   "id": "fc121e6ac4c1e979",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Now, we mentioned earlier that all you need to do is what does a function do and its parameters. How does it do is a secondary thing. But how should a new user know what does our function do?\n",
+    "\n",
+    "For that, we can add documentation in Python. Luckily, documentation in Python is pretty easy. Right under the function's signatures (its name and parameters), add multi-line comments (using triple inverted commas) and bingo! You can add relevant comments there. For example, I add this below Haversine function:\n",
+    "```python\n",
+    "def Haversine(lat1, lon1, lat2, lon2):\n",
+    "    \"\"\"\n",
+    "    This function takes first point's latitude and longitude, followed by the second point's latitude and longitude\n",
+    "    It returns the answer in a floating-point number, which we can round off as per our requirement.\n",
+    "    \"\"\"\n",
+    "```"
+   ],
+   "id": "bd600401a310b4fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "You can call this function anywhere and moving your cursor under the function's name will show its documentation, like:\n",
+    "\n",
+    "![Functions hints are quite useful](functionDocumentationHints.png)\n"
+   ],
+   "id": "3a028615e920419d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "One last thing. As you can see, its showing `Any` with all the 4 arguments. If you would like to, we can specify those arguments as `float` there and it will reflect in the function's documentation too.",
+   "id": "fb03db65586b651e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "decdacacf24fd033"
   }
  ],
  "metadata": {
